make the collapse and expand work correctly for each of the event card bodies

--- a/cms/medexCms/staticfiles/scss/examinations/partials/_case_event_card.scss
+++ b/cms/medexCms/staticfiles/scss/examinations/partials/_case_event_card.scss
@@ -118,4 +118,24 @@
             font-size: $default-font-size;
         }
     }
+
+    &.pre-scrutiny {
+        .event-body {
+            .content {
+                .collapsed {
+                    @include multiLineEllipsis($lineHeight: $default-line-height, $lineCount: 2, $bgColor: white);
+                }
+            }
+        }
+    }
+
+    &.qap-discussion {
+        .qap-details {
+            margin-bottom: 1rem;
+
+            p {
+                margin-bottom: 0px;
+            }
+        }
+    }
 }
